Merge resource-pack HTTP serving into TCP 26467 API server